# docuflow-ai

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: c2a81b238f4d_add_ocr_fields.py
apps/api/app/: main.py
apps/api/app/api/v1/: __init__.py
apps/api/app/api/v1/endpoints/: audit_logs.py  auth.py  dashboard.py  documents.py  purchase_orders.py  users.py  vendors.py
apps/api/app/core/: config.py  deps.py  rbac.py  security.py
apps/api/app/db/: base.py  init_db.py  session.py
apps/api/app/models/: approval_action.py  audit_log.py  document.py  extracted_field.py  purchase_order.py  review_task.py  role.py  user.py  validation_result.py  vendor.py
apps/api/app/schemas/: audit_log.py  auth.py  dashboard.py  document.py  purchase_order.py  user.py  vendor.py
apps/api/app/services/: audit_service.py  document_service.py  extraction_service.py  validation_service.py
apps/api/app/utils/: enums.py
docs/: api-reference.md  api.md  architecture.md  backend-integration.md  case-study.md  database.md  demo-script.md  deployment.md  faq.md  phase-roadmap.md  screenshots.md  security.md  workflow.md
frontend/: Dockerfile  package-lock.json
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/components/: Common.tsx
frontend/src/hooks/: useAuditLogs.ts  useAuth.ts  useDashboard.ts  useDocuments.ts  usePurchaseOrders.ts  useVendors.ts
infra/: docker-compose.yml
(+29 files in other folders)
